--- a/public/style.css
+++ b/public/style.css
@@ -5,10 +5,32 @@
 }
  
   #intro{
- 	background-color: #8a8c8a;
+ 	background-color: rgba(255,255,255,.1);
  	color: #FFFFFF;
  	height: 5%;	
+	
  } 
+
+ #back{
+	color:rgb(1, 134, 216);
+	
+	text-align:center;
+	position: absolute;
+	top:4%;
+	display: inline-block;
+	width:8%;
+	font-size:40px;
+	cursor:pointer;
+	font-weight: bolder ;
+ }
+ h1{
+	text-align: center;
+	margin-left:auto;
+	margin-right:auto;
+	width:75%;
+	padding-top:2%;
+	margin-bottom:4%;
+ }
 
 
  body { 
@@ -27,11 +49,13 @@
  }
  
  form input { 
- 	background-color: #0d0d0d;
+ 	background-color: #000000;
  	border: 0; 
- 	padding: 10px; 
+ 	padding: 0px; 
  	width: 90%; 
  	margin-right: 0.5%; 
+	outline:none; /*no outline when user clicks on message box*/
+	caret-color:#f2f2f2;/*The color of the cursor*/
  }
  
  form button { 
@@ -43,16 +67,21 @@
  	font-size: 20px; */
  }
  
- #send{
-
-	width:10%;
-	height:100%;
+ #sendbut{
+	width:3%;
+	height:80%;
 	background-color: #000000;
 	border-radius:100%;
+	position: absolute;
+	top:10%;	
+}
+
+#sendbut:hover{
+	cursor:pointer;
 }
 
  #sendimg{
-	width:10%;
+	width:100%;
 	height:100%;
 	padding:0;
 	margin:0;
@@ -64,38 +93,58 @@
 
  	margin: 0; 
  	padding: 0; 
+	color:white;
  	
  }
  
  #messages li { 
+	/**/
  	padding: 5px 10px; 
-	 background: #049cfb; 
+	/* background: rgb(4, 189, 4); */
+	background: #049cfb; 
+	width:25%;
+	margin:2.5% 0;
+	border-radius:15px;
+	
+
+ }
+
+ #messages #list{
+	position: relative;
+	left:70%;
+	list-style: none;
+ }
+
+ #messages #other{
+	background: rgb(88, 88, 88);
  }
  
- #messages li:nth-child(odd) { 
+ /*#messages li:nth-child(odd) { 
  	background: #f2f2f2; 
- }
+ }*/
 
 
 #list{
-	text-align: right;
+	text-align: left;
+	
 }
 
 #m{
 	border-radius:20px;
 	padding:15px;
 	margin:0;
-	width:80%;
+	width:95%;
 	height:100%;
-	color:white;
+	color:rgb(255, 255, 255);
 	
 }
 #messsagebox{
 	color:#8a8c8a;
 	border-radius:20px;
 	border:#8a8c8a 1px solid;	
-	background-color: #a60b0b;
+	width:99%;
+	background-color: #000000;
 	padding:0px;
-	margin:0px;
+	margin:0 auto;
 }
 
