--- a/public/style.css
+++ b/public/style.css
@@ -15,14 +15,69 @@
 	z-index:2;	
  } 
 
+ #constanttime{
+	color:white;
+	background-color:green;
+	border-radius: 20px;
+	margin:10px 0 0 10px;
+	width:60px;
+	text-align: center;
+	display:inline-block;
+ }
+
+
+
+ #batterycon{
+	border:solid 2px rgb(164, 163, 163);
+	/*width:3.5%;*/
+	width:40px;
+	height: 20px;
+	border-radius:5px;
+	position: relative;
+	float:right;
+	margin: 10px 10px 0 0;
+	/*left:75%;
+	display:inline-block;*/
+	
+	
+ }
+
+ #batterycon::after{
+	content: '';
+	display: block; /* or inline-block */
+	width: 5px;
+	height: 10px;
+	background-color: rgb(164, 163, 163); /*lightcoral the color*/
+	position: absolute;
+	top: 15%;
+	left: 100%; /* Position it to the right of the container */
+
+	border-top-right-radius:20px;
+	border-bottom-right-radius:20px;
+ }
+
+ #showbattery{
+	height:100%;
+	background-color: white;
+	border-radius:2px;
+ }
+
+ #charging{
+	position: absolute;
+	width:100%;
+	height:100%;
+	visibility: hidden;
+ }
+
+
  #back{
 	color:rgb(1, 134, 216);
 	
 	text-align:center;
-	position: absolute;
-	top:4%;
+	/*position: absolute;
+	top:4%;*/
 	display: inline-block;
-	width:8%;
+	width:12%;
 	font-size:40px;
 	cursor:pointer;
 	font-weight: bolder ;
@@ -38,6 +93,9 @@
 
  #grouppics{
 	text-align: center;
+	display:inline-block;
+	width:75%;
+	margin:0 auto 0 auto;
  }
 
  #yourpropic{
@@ -45,10 +103,28 @@
 	height:10%;
  }
 
+ #showpeople{
+	color:white;
+	display:inline-block;
+		text-align: center;
+	width:100%;
+	margin:0 auto 0 auto;
+	
+ }
+
+
+
 
  body { 
  	font: 20px;
 	background-color:black;
+}
+
+#timestamp{
+	color:lightgrey;
+	text-align:center;
+	margin:20px 0 10px 0;
+	display:block;
 }
 
  
@@ -114,48 +190,118 @@
  	margin: 0; 
  	padding: 0; 
 	color:white;	
+	text-align:right; /*For the blue text bubbles*/
  }
  
  #messages li { 
+	font-size:20px;
  	padding: 5px 10px; 
 	/* background: rgb(4, 189, 4); */
 	background: #049cfb; 
-	width:30%;
-	max-width:60%;
-	/*font-size:3vw;*/
-	margin: 2.5% 0;
+	display: inline-block;
+	margin: .5% 0;
 	border-radius:15px;
-	text-align: left;
+	/*text-align: center;*/
 	white-space:pre-line;
 	overflow-wrap: normal;
 	word-break:break-all;/*Will have to use this for now*/
-	/*overflow:auto;*/
 
  }
 
- #messages li:last-child{
+ #messages #li:first-child{
+	margin-top:10%;
+ }
+
+ #messages #list:last-child{
 	margin-bottom:8%;
  }
 
- #messages #list{
-	position: relative;
-	left:70%;
-	list-style: none;
+ #messages #list:last-of-type{
+	margin-bottom:10%;
  }
+
+ #messages #other:last-of-type{
+	margin-bottom:10%;
+ }
+
+ #messages #list{
+	position: relative; /*Relative to the block above?*/
+	left:-5%;
+	list-style: none;
+	text-align: left;
+	width:fit-content; /*Have the width be based on the length of the text*/
+	max-width:60%;
+	
+ }
+
+ #messages #list:last-of-type::before{
+	content: "";
+	position: absolute;
+	z-index: -1;
+	bottom: -2px;
+	right: -7px;
+	height: 20px;
+	border-right: 20px solid #0B93F6;
+	background: red;
+	border-bottom-left-radius: 16px 14px;
+	transform: translate(0, -2px);
+ }
+
+ #messages #list:last-of-type::after{
+	content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: -2px;
+  right: -55.5px;
+  width: 26px;
+  height: 20px;
+  background: black;
+  border-bottom-left-radius: 10px;
+ transform: translate(-30px, -2px);
+ } 
 
  #messages #other{
 	background: rgb(88, 88, 88);
+	display:block;
+	width:fit-content; /*Have the width be based on the length of the text*/
+	max-width:60%;
+	text-align:center;
+
  }
+
+ /*
+
+ #messages #other:last-of-type::before{
+	content: "";
+	position: absolute;
+	z-index: -1;
+	bottom: -2px;
+	right: -7px;
+	height: 20px;
+	border-right: 20px solid #0B93F6;
+	background: red;
+	border-bottom-left-radius: 16px 14px;
+	transform: translate(0, -2px);
+ }
+
+ #messages #other:last-of-type::after{
+	content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: -2px;
+  right: -55.5px;
+  width: 26px;
+  height: 20px;
+  background: white;
+  border-bottom-left-radius: 10px;
+ transform: translate(-30px, -2px);
+ }
+ */
  
  /*#messages li:nth-child(odd) { 
  	background: #f2f2f2; 
  }*/
 
-
-#list{
-	text-align: left;
-	
-}
 
 #m{
 	border-radius:20px;
